# plugin-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: AirportFilter.h  Event.h  EventFilter.h  flow-sdk.h
include/ECFMP/: ApiElementCollection.h  ECFMP.h  ElementCollectionTypes.h  Event.h  EventCollection.h  EventListener.h  EventListenerFilter.h  EventListeners.h  EventStream.h  FlightInformationRegion.h  FlowMeasure.h  FlowMeasureFilters.h  Iterable.h  Sdk.h  SdkEvents.h  SdkFactory.h
include/flow-sdk/: AirportFilter.h  ApiElement.h  ApiElementCollection.h  ApiElementIterator.h  ElementCollectionTypes.h  Event.h  EventBus.h  EventCollection.h  EventFilter.h  EventListener.h  EventListenerFilter.h  EventListeners.h  EventParticipant.h  EventStream.h  FlightInformationRegion.h  FlowMeasure.h  FlowMeasureFilters.h  HttpClient.h  Iterable.h  LevelFilter.h  LevelRangeFilter.h  Logger.h  Measure.h  MultipleLevelFilter.h  NewEventFilter.h  NewEventListener.h  RangeToDestinationFilter.h  RouteFilter.h  Sdk.h  SdkEventListenerTypes.h  SdkEventListeners.h  SdkEvents.h  SdkFactory.h  flow-sdk.h
include/mock/: EventMock.h  (+15 more)
src/: CMakeLists.txt  pch.h  true.cpp  true.h
src/api/: ApiDataDownloadedEvent.h  ApiDataDownloader.cpp  ApiDataDownloader.h  ApiDataListenerTypes.h  ApiDataParser.cpp  ApiDataParser.h  ApiDataScheduler.cpp  ApiDataScheduler.h  ApiDataSource.h  ApiElementIterator.cpp  ConcreteApiElementCollection.cpp  ConcreteApiElementCollection.h  ConcreteStringIdentifiedApiElementCollection.cpp  ConcreteStringIdentifiedApiElementCollection.h  EventDataParser.cpp  EventDataParser.h  EventDataParserInterface.h  FlightInformationRegionDataParser.cpp  FlightInformationRegionDataParser.h  FlightInformationRegionDataParserInterface.h  FlowMeasureDataParser.cpp  FlowMeasureDataParser.h  FlowMeasureDataParserInterface.h  FlowMeasureFilterParser.cpp  FlowMeasureFilterParser.h  FlowMeasureFilterParserInterface.h  FlowMeasureMeasureParser.cpp  FlowMeasureMeasureParser.h  FlowMeasureMeasureParserInterface.h  InternalApiElementCollection.h  InternalElementCollectionTypes.h  InternalStringIdentifiedApiElementCollection.h  InternalStringIdentifierApiElementCollection.h
src/date/: ParseDateStrings.cpp  ParseDateStrings.h
src/euroscope/: EuroscopeAircraft.h  EuroscopeAircraftFactory.h  EuroscopeAircraftFactoryImpl.cpp  EuroscopeAircraftFactoryImpl.h  EuroscopeAircraftImpl.cpp  EuroscopeAircraftImpl.h
src/event/: ConcreteEvent.cpp  ConcreteEvent.h  ConcreteEventParticipant.cpp  ConcreteEventParticipant.h  Event.cpp  Event.h  EventParticipant.h
src/eventbus/: AsynchronousEventDispatcher.h  EuroscopeEventDispatcher.h  EventDispatcher.h  EventDispatcherFactory.h  EventStream.h  InternalEventBus.h  InternalEventBusFactory.cpp  InternalEventBusFactory.h  InternalEventStream.h  PendingEuroscopeEvents.cpp  PendingEuroscopeEvents.h  SubscriptionFlags.h  SynchronousEventDispatcher.h
src/flightinformationregion/: ConcreteFlightInformationRegion.cpp  ConcreteFlightInformationRegion.h  ConcreteFlightInformationRegionCollection.cpp  ConcreteFlightInformationRegionCollection.h  FlightInformationRegion.h  FlightInformationRegionCollection.h  InternalFlightInformationRegionCollection.h
src/flowmeasure/: CanonicalFlowMeasureInfo.cpp  ConcreteAirportFilter.cpp  ConcreteAirportFilter.h  ConcreteEventFilter.cpp  ConcreteEventFilter.h  ConcreteFlowMeasure.cpp  ConcreteFlowMeasure.h  ConcreteFlowMeasureFilters.cpp  ConcreteFlowMeasureFilters.h  ConcreteLevelFilter.cpp  ConcreteLevelFilter.h  ConcreteLevelRangeFilter.cpp  ConcreteLevelRangeFilter.h  ConcreteMeasure.cpp  ConcreteMeasure.h  ConcreteMeasureFactory.cpp  ConcreteMeasureFactory.h  ConcreteMultipleLevelFilter.cpp  ConcreteMultipleLevelFilter.h  ConcreteRangeToDestinationFilter.cpp  ConcreteRangeToDestinationFilter.h  ConcreteRouteFilter.cpp  ConcreteRouteFilter.h  FlowMeasureStatusUpdates.cpp  FlowMeasureStatusUpdates.h
src/log/: LogDecorator.cpp  LogDecorator.h  NullLogger.cpp  NullLogger.h
src/plugin/: ConcreteEventListeners.cpp  ConcreteEventListeners.h  ConcreteSdk.cpp  ConcreteSdk.h  ConcreteSdkEventListeners.cpp  ConcreteSdkEventListeners.h  InternalEventListeners.h  InternalSdk.cpp  InternalSdk.h  InternalSdkEvents.h  SdkFactory.cpp
src/thread/: ThreadPool.cpp  ThreadPool.h
src/time/: Clock.cpp  Clock.h
test/: CMakeLists.txt  FlowSdkHeaderTest.cpp  FlowSdkMockHeaderTest.cpp  MockHeaderTest.cpp  SdkHeaderTest.cpp  main.cpp  test.cpp
test/api/: ApiDataDownloaderTest.cpp  ApiDataParserTest.cpp  ApiDataSchedulerTest.cpp  ApiElementIteratorTest.cpp  ConcreteApiElementCollectionTest.cpp  ConcreteStringIdentifiedApiElementCollectionTest.cpp  EventDataParserTest.cpp  FlightInformationRegionDataParserTest.cpp  FlowMeasureDataParserTest.cpp  FlowMeasureFilterParserTest.cpp  FlowMeasureMeasureParserTest.cpp  InternalApiElementCollectionTest.cpp  InternalStringIdentifierApiElementCollectionTest.cpp
test/date/: ParseDateStringsTest.cpp
test/event/: ConcreteEventParticipantTest.cpp  ConcreteEventTest.cpp
test/eventbus/: EventDispatcherFactoryTest.cpp  EventStreamTest.cpp  InternalEventBusTest.cpp  InternalEventStreamTest.cpp
test/flightinformationregion/: ConcreteFlightInformationRegionCollectionTest.cpp  ConcreteFlightInformationRegionTest.cpp
test/flowmeasure/: CanonicalFlowMeasureInfoTest.cpp  ConcreteAirportFilterTest.cpp  ConcreteEventFilterTest.cpp  ConcreteFlowMeasureFiltersTest.cpp  ConcreteFlowMeasureTest.cpp  ConcreteLevelFilterTest.cpp  ConcreteLevelRangeFilterTest.cpp  ConcreteMeasureTest.cpp  ConcreteMultipleLevelFilterTest.cpp  ConcreteRangeToDestinationFilterTest.cpp  ConcreteRouteFilterTest.cpp  FlowMeasureStatusUpdatesTest.cpp
test/log/: LogDecoratorTest.cpp
test/mock/: MockEuroscopeAircraft.h  MockEuroscopeAircraftFactory.h  MockEventListener.h  MockEventListenerFilter.h  MockHttpClient.h  MockLogger.h
test/pch/: pch.h
test/plugin/: ConcreteEventListenersTest.cpp  ConcreteSdkTest.cpp  InternalSdkTest.cpp  SdkFactoryTest.cpp
test/thread/: ThreadPoolTest.cpp
(+30 files in other folders)
